--- a/climb.html
+++ b/climb.html
@@ -7,7 +7,7 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <script src="main.js"></script>
@@ -37,9 +37,9 @@
                             <li class="nav-item">
                                 <a href="#" class="text-success">Home</a>
                             </li>
-                            <li class="nav-item dropdown dropdown-submenu">
-                                <a href="#" class="text-success dropdown-toggle" data-toggle="dropdown">dropdowns</a>
-                                <ul class="dropdown-menu">
+                            <li class="dropdown">
+                                <a href="#" class="text-success dropdown-toggle">dropdowns</a>
+                                <ul class="dropdown-show">
                                     <li>
                                         <a class="dropdown-item" href="#">Link 1</a>
                                     </li>
@@ -488,7 +488,7 @@
             </div>
             <div id="contact">
                 <nav>
-                    <ul class ="text-center">
+                    <ul class="text-center">
                         <li>
                             <i class="fab fa-instagram"></i>
                         </li>
