--- a/climb.html
+++ b/climb.html
@@ -18,12 +18,14 @@
         <div class="container">
             <div class="text-center">
                 <h4 class="text-center text-white text-uppercase font-weight-normal pt-5">module</h4>
-                <h1 class="text-white w-50 font-weight-normal mx-auto pt-5">The best view comes after the hardest climb.</h1>
+                <h1 class="text-white w-50 font-weight-normal mx-auto pt-5">The best view comes after the hardest
+                    climb.</h1>
                 <p class="text-white-50">HandCarafted by
                     <a href="#" class="text-white">FreeHTML5.co</a>
                 </p>
                 <input type="button" value="GET STARTED" class="btn btn-success p-2">
             </div>
+            <h1>Update Abc</h1>
         </div>
     </header>
     <main>
@@ -69,7 +71,8 @@
             <div class="container">
                 <div id="showBusiness" class="bg-white-50 text-center pt-5">
                     <h1 class="title">business to the next level</h1>
-                    <p class="quote">Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind
+                    <p class="quote">Far far away, behind the word mountains, far from the countries and Consonantia,
+                        there live the blind
                         texts.
                     </p>
                     <hr>
@@ -77,19 +80,22 @@
                     <div class="row">
                         <div class="card col col-sm-4 text-justify">
                             <h4 class="card-title">Angular Js</h4>
-                            <p class="card-text">Far far away, behind the word mountains, far from the countries and Consonantia, there live the
+                            <p class="card-text">Far far away, behind the word mountains, far from the countries and
+                                Consonantia, there live the
                                 blind texts.
                             </p>
                         </div>
                         <div class="card col col-sm-4 text-justify">
                             <h4 class="card-title">Angular Js</h4>
-                            <p class="card-text">Far far away, behind the word mountains, far from the countries and Consonantia, there live the
+                            <p class="card-text">Far far away, behind the word mountains, far from the countries and
+                                Consonantia, there live the
                                 blind texts.
                             </p>
                         </div>
                         <div class="card col col-sm-4 text-justify">
                             <h4 class="card-title">Angular Js</h4>
-                            <p class="card-text">Far far away, behind the word mountains, far from the countries and Consonantia, there live the
+                            <p class="card-text">Far far away, behind the word mountains, far from the countries and
+                                Consonantia, there live the
                                 blind texts.
                             </p>
                         </div>
@@ -108,7 +114,8 @@
                             <i class="fab fa-fly card col col-sm-1 "></i>
                             <div class="card-body col col-sm-9">
                                 <h6 class="card-title font-weight-bold">Marketing</h6>
-                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from the countries and Consonantia</p>
+                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from
+                                    the countries and Consonantia</p>
                             </div>
                         </div>
                     </div>
@@ -117,7 +124,8 @@
                             <i class="fab fa-fly card col col-sm-1 "></i>
                             <div class="card-body col col-sm-9">
                                 <h6 class="card-title font-weight-bold">Marketing</h6>
-                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from the countries and Consonantia</p>
+                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from
+                                    the countries and Consonantia</p>
                             </div>
                         </div>
                     </div>
@@ -126,7 +134,8 @@
                             <i class="fab fa-fly card col col-sm-1 "></i>
                             <div class="card-body col col-sm-9">
                                 <h6 class="card-title font-weight-bold">Marketing</h6>
-                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from the countries and Consonantia</p>
+                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from
+                                    the countries and Consonantia</p>
                             </div>
                         </div>
                     </div>
@@ -139,7 +148,8 @@
                             <i class="fab fa-fly card col col-sm-1 "></i>
                             <div class="card-body col col-sm-9">
                                 <h6 class="card-title font-weight-bold">Marketing</h6>
-                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from the countries and Consonantia</p>
+                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from
+                                    the countries and Consonantia</p>
                             </div>
                         </div>
                     </div>
@@ -148,7 +158,8 @@
                             <i class="fab fa-fly card col col-sm-1 "></i>
                             <div class="card-body col col-sm-9">
                                 <h6 class="card-title font-weight-bold">Marketing</h6>
-                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from the countries and Consonantia</p>
+                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from
+                                    the countries and Consonantia</p>
                             </div>
                         </div>
                     </div>
@@ -157,7 +168,8 @@
                             <i class="fab fa-fly card col col-sm-1 "></i>
                             <div class="card-body col col-sm-9">
                                 <h6 class="card-title font-weight-bold">Marketing</h6>
-                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from the countries and Consonantia</p>
+                                <p class="card-text text-black-50">Far far away, behind the word mountains, far from
+                                    the countries and Consonantia</p>
                             </div>
                         </div>
                     </div>
@@ -169,7 +181,8 @@
         <div id="gallery" class="text-center">
             <div class="container">
                 <h1 class="title">Our gallery</h1>
-                <p class="quote">Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind texts.</p>
+                <p class="quote">Far far away, behind the word mountains, far from the countries and Consonantia, there
+                    live the blind texts.</p>
                 <hr>
                 <div class="row">
                     <div class="img col col-sm-8">
@@ -207,15 +220,18 @@
         <div id="team" class="text-center">
             <div class="container">
                 <h1 class="title">Our Team</h1>
-                <p class="quote">Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind texts.</p>
+                <p class="quote">Far far away, behind the word mountains, far from the countries and Consonantia, there
+                    live the blind texts.</p>
                 <hr>
                 <div class="row">
                     <div class="col ">
                         <img src="images/person_1.jpg" alt="">
                         <h2>JeanDoe , XYZ Co</h2>
                         <p class="person">Designer</p>
-                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind
-                            texts. Far far away, behind the word mountains, far from the countries and Consonantia, there
+                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live
+                            the blind
+                            texts. Far far away, behind the word mountains, far from the countries and Consonantia,
+                            there
                             live the blind texts.
                         </p>
                     </div>
@@ -223,8 +239,10 @@
                         <img src="images/person_2.jpg" alt="">
                         <h2>JeanDoe , XYZ Co</h2>
                         <p class="person">Designer</p>
-                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind
-                            texts. Far far away, behind the word mountains, far from the countries and Consonantia, there
+                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live
+                            the blind
+                            texts. Far far away, behind the word mountains, far from the countries and Consonantia,
+                            there
                             live the blind texts.
                         </p>
                     </div>
@@ -232,8 +250,10 @@
                         <img src="images/person_3.jpg" alt="">
                         <h2>JeanDoe , XYZ Co</h2>
                         <p class="person">Designer</p>
-                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind
-                            texts. Far far away, behind the word mountains, far from the countries and Consonantia, there
+                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live
+                            the blind
+                            texts. Far far away, behind the word mountains, far from the countries and Consonantia,
+                            there
                             live the blind texts.
                         </p>
                     </div>
@@ -246,28 +266,32 @@
         <div id="experties" class="text-center">
             <div class="container">
                 <h1 class="title">our Experties</h1>
-                <p class="quote">Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind texts.
+                <p class="quote">Far far away, behind the word mountains, far from the countries and Consonantia, there
+                    live the blind texts.
                 </p>
                 <hr>
                 <div class="row">
                     <div class="col">
                         <i class="far fa-heart"></i>
                         <h1>web Design</h1>
-                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind
+                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live
+                            the blind
                             texts.
                         </p>
                     </div>
                     <div class="col">
                         <i class="far fa-heart"></i>
                         <h1>web Design</h1>
-                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind
+                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live
+                            the blind
                             texts.
                         </p>
                     </div>
                     <div class="col">
                         <i class="far fa-heart"></i>
                         <h1>web Design</h1>
-                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind
+                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live
+                            the blind
                             texts.
                         </p>
                     </div>
@@ -277,21 +301,24 @@
                     <div class="col">
                         <i class="far fa-heart"></i>
                         <h1>web Design</h1>
-                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind
+                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live
+                            the blind
                             texts.
                         </p>
                     </div>
                     <div class="col">
                         <i class="far fa-heart"></i>
                         <h1>web Design</h1>
-                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind
+                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live
+                            the blind
                             texts.
                         </p>
                     </div>
                     <div class="col">
                         <i class="far fa-heart"></i>
                         <h1>web Design</h1>
-                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind
+                        <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live
+                            the blind
                             texts.
                         </p>
                     </div>
@@ -301,7 +328,8 @@
         <div id="blog" class="text-center">
             <div class="container">
                 <h1 class="title">Recent From Blog</h1>
-                <p class="quote">Far far away, behind the word mountains, far from the countries and Consonantia, there live the blind texts.
+                <p class="quote">Far far away, behind the word mountains, far from the countries and Consonantia, there
+                    live the blind texts.
                 </p>
                 <hr>
                 <div class="row">
@@ -316,7 +344,8 @@
                             </div>
                         </div>
                         <div class="blog_main">
-                            <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the
+                            <p>Far far away, behind the word mountains, far from the countries and Consonantia, there
+                                live the
                                 blind texts.
                             </p>
                             <p class="text-success font-weight-bold">Learn More...</p>
@@ -334,7 +363,8 @@
                             </div>
                         </div>
                         <div class="blog_main">
-                            <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the
+                            <p>Far far away, behind the word mountains, far from the countries and Consonantia, there
+                                live the
                                 blind texts.
                             </p>
                             <p class="text-success font-weight-bold">Learn More...</p>
@@ -352,7 +382,8 @@
                             </div>
                         </div>
                         <div class="blog_main">
-                            <p>Far far away, behind the word mountains, far from the countries and Consonantia, there live the
+                            <p>Far far away, behind the word mountains, far from the countries and Consonantia, there
+                                live the
                                 blind texts.
                             </p>
                             <p class="text-success font-weight-bold">Learn More...</p>
@@ -488,7 +519,7 @@
             </div>
             <div id="contact">
                 <nav>
-                    <ul class ="text-center">
+                    <ul class="text-center">
                         <li>
                             <i class="fab fa-instagram"></i>
                         </li>
