--- a/climb.html
+++ b/climb.html
@@ -17,16 +17,9 @@
     <header>
         <div class="container">
             <div class="text-center">
-                <h4 class="text-center text-white text-uppercase font-weight-normal pt-5">module</h4>
-                <h1 class="text-white w-50 font-weight-normal mx-auto pt-5">The best view comes after the hardest
-                    climb.</h1>
-                <p class="text-white-50">HandCarafted by
-                    <a href="#" class="text-white">FreeHTML5.co</a>
-                </p>
-                <input type="button" value="GET STARTED" class="btn btn-success p-2">
+                <h1>sdsds</h1>
+                <a href="sadsad">asdsad</a>
             </div>
-            <h1>Update Abc</h1>
-        </div>
     </header>
     <main>
 
