--- a/climb.html
+++ b/climb.html
@@ -19,6 +19,7 @@
             <div class="text-center">
                 <h1>sdsds</h1>
                 <a href="sadsad">asdsad</a>
+                <h1>sadsad</h1>
             </div>
     </header>
     <main>
