--- a/climb.html
+++ b/climb.html
@@ -17,9 +17,9 @@
     <header>
         <div class="container">
             <div class="text-center">
-                <h1>sdsds</h1>
-                <a href="sadsad">asdsad</a>
-                <h1>sadsad</h1>
+                <div>
+                    sadsadsa
+                </div>
             </div>
     </header>
     <main>
